add some reviwe query method

--- a/DataFetcher/DataAnalyzer/conf/application.conf
+++ b/DataFetcher/DataAnalyzer/conf/application.conf
@@ -6,9 +6,9 @@ application.langs="en"
 
 # Database configuration
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://127.0.0.1:3306/whatseat?characterEncoding=UTF-8"
+db.default.url="jdbc:mysql://127.0.0.1:3306/eat?characterEncoding=UTF-8"
 db.default.user=root
-db.default.password="whs123456"
+db.default.password="12345"
 
 # Evolutions
 evolutionplugin=disabled
